# flight-controller

./: .gitignore  README.md
Boards/h7v1/: .cproject  .mxproject  .project  h7v1 Debug.launch  h7v1.ioc
Boards/p4v1/: CMakeLists.txt  README.md  sdkconfig
Foundation/: platform.c  platform.h  pubsub.c  pubsub.h
Modules/: macro.h  module.c
base/boards/p4v1/main/: CMakeLists.txt  idf_component.yml  main.c  module.c
base/boards/p4v1/main/display/: display.c  display.h  overlay_manager.c  overlay_manager.h
base/boards/p4v1/main/video/: app_video.c  app_video.h  app_video_stream.c  app_video_stream.h  app_video_utils.c  app_video_utils.h
base/boards/s3v1/main/: CMakeLists.txt  main.c  module.c
docs/: HARDFAULT_ALIGNMENT_BUG.md  SI_UNIT_MIGRATION.md  TUNING_PARAM_ZERO_BUG.md
pytest/: attitude_estimation_view.py  calibrate_accel.py  calibrate_compass.py  gps_config.py  gps_sim_ubx.py  position_estimation_view.py  test_attitude.py  test_charts.py  test_compass_vis.py  test_rc.py  view_attitude.py  view_charts.py  view_vector.py  view_vectors.py
simulation/: install.sh  run_sitl_macos.sh  sitl_bridge.py  test_fly.py  uninstall.sh
tools/: GPS_SIMULATOR_VALIDATION.md  attitude_estimation_mag_view.py  attitude_estimation_view.py  attitude_view.py  baro_fusion_view.py  calibration_accel.py  calibration_compass.py  calibration_gyro.py  compass_calibrate.py  eskf_view.py  fft_spectrogram.py  fft_spectrum_dual_view.py  fft_spectrum_view.py  fft_view.py  flight_telemetry_bicopter_view.py  flight_telemetry_view.py  gps_config.py  gps_config_f9p.py  gps_fusion_view.py  gps_read_upx.py  gps_sim_ubx.py  gps_view.py  imu_calibrate_accel.py  linear_accel_view.py  mag_diagnostic_view.py  mag_fusion_view.py  mix_control_bicopter_test.py  mix_control_quadcopter_test.py  mix_control_test.py  noise_analytics_view.py  optflow_derot_view.py  optflow_velocity_view.py  optflow_view.py  position_estimation_2d.py  position_estimation_2d_and_z.py  position_estimation_chart.py  position_estimation_chart_xy.py  position_estimation_chart_z.py  position_estimation_compare.py  position_estimation_optflow.py  (+10 more)
(+247 files in other folders)
